# bank-flask

./: .env.example  .gitignore  Makefile  README.md  app.py  conftest.py  devbox.json  docker-compose.yml  manage.py  pyproject.toml
config/: settings.py
migrations/versions/: 15406192e777_add_tables.py  15f356ba02e9_add_is_superuser_attr_for_user.py
src/apps/api/: routes.py
src/apps/api/adapters/: __init__.py  account.py  authentication.py
src/apps/api/resources/: __init__.py  account.py  authentication.py  person.py  transaction.py  user.py
src/apps/usecases/: __init__.py  account.py  authentication.py  person.py  transaction.py  user.py
src/blueprints/: api_v1.py
src/domain/: exceptions.py
src/domain/entities/: __init__.py  account.py  auth.py  bank.py  person.py  transaction.py  user.py
src/ext/: configuration.py  database.py  errors.py  migration.py  serializer.py  token.py
src/infrastructure/database/: __init__.py  account.py  bank.py  base.py  person.py  transaction.py  user.py
src/infrastructure/repositories/: __init__.py  account.py  bank.py  person.py  transaction.py  user.py
tests/infrastructure/repositories/: test_account.py  test_person.py  test_transaction.py
