[tool.poetry]
name = "bank-flask"
version = "0.1.0"
description = ""
authors = ["Pedro Fonseca"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
flask-migrate = "^4.0.5"
flask-sqlalchemy = "^3.1.1"
python-decouple = "^3.8"
cryptography = "^41.0.7"
pymysql = "^1.1.0"
flask-jwt-extended = "^4.6.0"
flask-restful = "^0.3.10"
flask-marshmallow = "^0.15.0"
flask-cors = "^4.0.0"
requests = "^2.31.0"
marshmallow-sqlalchemy = "^0.29.0"



[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"
faker = "^21.0.0"
pytest = "^7.4.3"
pytest-flask = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
